--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ body {
     display: grid;
     grid-template-columns: 100px 200px 1fr;
     grid-gap: 20px;
-    margin-bottom: 4rem
+    margin-bottom: 4rem;
 }
 
 .titulo {
@@ -160,7 +160,7 @@ body {
     grid-column: 1 / 5;
     padding: 10px;
     background: #FB5;
-     box-shadow: 0 -4px  12px rgba(0, 0, 0, 0.15);
+     box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.15);
 }
 
 .copy p {
